--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
     "require": {
         "php": ">=8.1",
         "monolog/monolog": "^3.0",
-        "aws/aws-sdk-php": "^3.231"
+        "aws/aws-sdk-php": "3.229.2"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.5",
